# ResearchScraper

./: .arxiv_cache.json  .gitignore  .replit  README.md  analyzed_papers.json  arxiv_client.py  arxiv_papers.py  cache_manager.py  config.py  exporters.py  formatter.py  papers.json  papers_export.csv  papers_export.json  programmatic_test.json  pyproject.toml  setup.py  test_export.json  test_papers.json
arxiv_fetcher/: __init__.py  arxiv_client.py  cache_manager.py  cli.py  config.py  exporters.py  formatter.py  paper_analyzer.py  paper_downloader.py  paper_parser.py  paper_summarizer.py
paper_analysis/: __init__.py  __main__.py  llama_parser.py
papers/: .download_log.json
papers/Designing and Evaluating an Educational Recommender System with_  Different Levels of User Control/: metadata.json
papers/Development of the Critical Reflection and Agency in Computing Index/: metadata.json
papers/Expertise elevates AI usage_ experimental evidence comparing laypeople_  and professional artists/: metadata.json
papers/Perceived Fairness of the Machine Learning Development Process_ Concept_  Scale Development/: metadata.json
papers/Understanding the LLM-ification of CHI_ Unpacking the Impact of LLMs at_  CHI through a Systematic L/: metadata.json
test_papers/: .download_log.json
test_papers/Test Paper/: metadata.json
