[project]
name = "arxiv-fetcher"
version = "0.1.0"
description = "ArXiv paper fetcher for CS and AI research papers"
requires-python = ">=3.11"
dependencies = [
    "arxiv>=2.1.3",
    "openai>=1.60.1",
    "rich>=13.9.4",
]

[project.scripts]
arxiv-fetch = "arxiv_fetcher.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
